Fixed what I could in terms of the images not being responsive on mobile but working on desktop?
Yeah no clue either.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -82,17 +82,6 @@ body {
 
 }
 
-
-
-
-/* Box */
-/*
-.portfolio-page-wrapper {
-    margin: 15px;
-    background-color: #fff;
-}
-*/
-
 .container {
     display: flex;
     flex-wrap: wrap;
